--- a/chandhana sit2.html
+++ b/chandhana sit2.html
@@ -62,27 +62,24 @@
   <section id="work" class="section">
     <h2 style="color: #454545;">what i've worked on</h2>
     <ul> 
-    <li>photometrically looking for alien life on the asteroid belt.</p>
+    <li>currently testing bay area foods for chemicals that leach from plastic with nat friedman at <a href="https://www.plasticlist.org/" style=" color: #944547; text-decoration: none;">plasticlist.org </a></p>
+    <li>worked with dr.law at uncch to photometrically look for alien life on the asteroid belt. some cool  <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">pictures from then</p>
     <li>spent the past year+ diving deep into the <a href="https://www.nasdaq.com/articles/chandhana-sathishkumar%3A-reducing-reliance-on-traditional-plastics" style="color: #944547; text-decoration: none;">plastic alternative space</a>. made <a href="https://x.com/chandhana01/status/1644734484435312643" style="color: #944547; text-decoration: none;">edible bioplastic</a> from red algae for &lt;$1/1.5m<sup>2</sup> in a makeshift lab at home. got an emergent ventures grant. <a href="https://x.com/chandhana01/status/1779358580673482814" style="color: #944547; text-decoration: none;">recent update.</a></p>
-    <li>did some business development for <a href="http://altereainc.com" style="color: #944547; text-decoration: none;">alterea.</a> </p>
-    <li>spent a year exploring the brain’s mysteries. wrote a <a href="https://www.barnesandnoble.com/w/what-memory-chandhana-sathishkumar/1140872620" style="color: #944547; text-decoration: none;">book</a> about the science of memory. convinced an iit-m professor to let me join his phd research group at 16, where i researched fetal memory development and phosphene-induced vision restoration. was a neurotech fellow at <a href="https://brainsatplay.com/" style="color: #944547; text-decoration: none;" >brains@play</a>. and made an <a href="https://medium.com/@chandhanas/brain-computer-interfaces-science-tech-and-future-6ba87607ab1b" style="color: #944547; text-decoration: none;" >article repository</a> about the journey.</p>
-    <li>worked alongside walmart to redesign their retail experience for 2030. <a href="https://www.linkedin.com/posts/wal-mart-canada_walmart-walmartcanada-thisisthatplace-activity-6925103344080338944-7lfQ/" style="color: #944547; text-decoration: none;">pitched</a> the recommendation to c-suite executives of walmart international and the ceo of walmart canada.</p>
-    </ul>
+    <li>spent a year exploring the brain’s mysteries. wrote a <a href="https://books.google.com/books/about/What_Memory.html?id=GanhzgEACAAJ" style="color: #944547; text-decoration: none;">book</a> about the science of memory. convinced an iit-m professor to let me join his phd research group at 16, where i researched fetal memory development and phosphene-induced vision restoration. was a neurotech fellow at <a href="https://brainsatplay.com/" style="color: #944547; text-decoration: none;" >brains@play</a>. and made an <a href="https://medium.com/@chandhanas/brain-computer-interfaces-science-tech-and-future-6ba87607ab1b" style="color: #944547; text-decoration: none;" >article repository</a> about the journey.</p>
 </section>
 
   <section id="about" class="section">
     <h2 style="color: #454545;">about me</h2>
     <ul>
     <li>grew up in <a href="https://www.incredibleindia.org/content/incredible-india-v2/en/destinations/chennai.html" style="color: #944547; text-decoration: none;">chennai</a>, india for most my life where i — learned 5 languages, handmade magazines, learned half the <a href="https://www.youtube.com/watch?v=VgVQKCcfwnU" style="color: #944547; text-decoration: none;">periodic table</a> when i was nine, obsessed over hindu + greek mythology and designed <a href="https://www.instagram.com/p/C5SH0dzLIvq/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" style="color: #944547; text-decoration: none;">met gala-esque</a> dresses inspired by it, played <a href="https://en.wikipedia.org/wiki/Kho_kho" style="color: #944547; text-decoration: none;">kho-kho</a> and <a href="https://en.wikipedia.org/wiki/Kabaddi" style="color: #944547;text-decoration: none;">kabaddi</a>, rapped in sanskrit with chyk, learned to parasail and scuba dive on a <a href="https://en.wikipedia.org/wiki/Havelock_island" style="color: #944547;text-decoration: none;">random island</a> in the bay of bengal, trained <a href="https://en.wikipedia.org/wiki/Bharatanatyam" style="color: #944547; text-decoration: none;">bharatnatayam</a> briefly, convinced my school to let me skip exams for two years, and built up an extremely high spice tolerance.</p>
-    <li>moved to america in 2023 to attend uncch on a full ride.</p>
-    <li>i<a href="https://www.instagram.com/chandhana.art/" style="color: #944547; text-decoration: none;"> make art</a> somewhat frequently. self-taught. mostly sketches, but i’ve been experimenting with color lately.</p>
+    <li>moved to america in 2023. attend uncch on a full ride for a year. currently on leave of absence.</p>
     </ul>
   </section>
 
   <section id="life" class="section">
     <h2 style="color: #454545;">living life</h2>
     <blockquote style="border-left: 2px solid #000000; padding-left: 1rem;">
-        <p>i enjoy getting to live life through all my senses. thinking, listening, tasting, touching,  learning, feeling. there’s just so much this world has to offer. <a href ="https://sive.rs/htl03" style="color: #C49491; text-decoration: none;">"if you knew you’d go blind tomorrow, how intensely would you look at the world today?"</a> a sub version of this is doing things i’m not exactly qualified to do. or as i call it, sidequesting — a blend of unpredictability x challenge x experience.</p>
+        <p> there’s just so much this world has to offer. <a href ="https://sive.rs/htl03" style="color: #C49491; text-decoration: none;">"if you knew you’d go blind tomorrow, how intensely would you look at the world today?"</a> a sub version of this is doing things i’m not exactly qualified to do — a blend of unpredictability x challenge</p>
       </blockquote>      
       <p><em>never let them know your next move, right?</em> (;</p>
 
@@ -94,17 +91,14 @@
       </style>
 <ul>
     <li>did stand-up comedy competitively (yes, it’s a thing) for 3 years.</p>
-    <li>got randomly funded in crypto to go to <a href="https://x.com/chandhana01/status/1454013480713994244" style="color: #944547; text-decoration: none;">nft nyc</a> from india</p>
     <li>set a <a href="https://www.guinnessworldrecords.com/world-records/685929-longest-duration-hula-hooping-around-one-elbow" style="color: #944547; text-decoration: none;">guinness record</a> because i was bored during the pandemic (got invited to be a dancer in a <a href="https://www.thehindu.com/entertainment/movies/rashmika-mandannas-next-rainbow-to-be-a-tamil-telugu-bilingual/article66694241.ece" style="color: #944547; text-decoration: none;">tamil-telugu movie</a> after this lol)</p>
-    <li>dabbled in <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">astrophotography</a></p>
-    <li>gave <a href="https://x.com/chandhana01/status/1676648363352264705" style="color: #944547; text-decoration: none;">a talk</a> in switzerland alongside derek sivers, michael lopp, and tom preston-werner. wrecked my brain for a month to write this speech; ended with a standing ovation (: this experience is very close to my heart for several reasons</p>
     <li>got invited to have high tea with a baroness in the <a href="https://en.wikipedia.org/wiki/House_of_Lords" style="color: #944547; text-decoration: none;">house of lords</a> in london</p>
     <li>touched human brains and hearts (in a non-serial killer way) </p>
+    <li><a href="https://x.com/chandhana01/status/1803443735125995951" style="color: #944547; text-decoration: none;">climbed a glacier </a> on the alps </p>
     <li>spent the recent new years eve making a <a href="https://x.com/chandhana01/status/1741554947668467752" style="color: #944547; text-decoration: none;"> dagger</a>, and the next day learning to throw it </p>
-    <li><a href="https://youtu.be/li9ExOycNVs" style="color: #944547; text-decoration: none;"> tried out</a> for unc’s competitive salsa dance team with no experience </p>
+    <li><a href="https://youtu.be/li9ExOycNVs" style="color: #944547; text-decoration: none;"> tried out</a> for a competitive salsa dance team with no experience </p>
     <li>trained swim with <a href="https://en.wikipedia.org/wiki/Anton_Down-Jenkins" style="color: #944547; text-decoration: none;">an olympian</a> for a month</p>
-    <li>stood on top of a <a href="https://x.com/chandhana01/status/1763191692554068370" style="color: #944547; text-decoration: none;">nuclear reactor</a> and watched fission emit cherenkov radiation. also spent some time exploring a <a href="https://x.com/chandhana01/status/1780079775148806600" style="color: #944547; text-decoration: none;">particle accelerator</a> </p>
-    <li> currently planning a prank involving a castle and 300-something handwritten letters (; </p>
+    <li>stood on top of a <a href="https://x.com/chandhana01/status/1763191692554068370" style="color: #944547; text-decoration: none;">nuclear reactor</a> and watched fission emit cherenkov radiation </p>
  </ul>
     
 
