--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2 style="color: #454545;">what i've worked on</h2>
     <ul> 
     <li>currently testing bay area foods for chemicals that leach from plastic with nat friedman at <a href="https://www.plasticlist.org/" style=" color: #944547; text-decoration: none;">plasticlist.org </a></p>
-    <li>worked with dr.law at uncch to photometrically look for alien life on the asteroid belt. some cool  <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">pictures from then</p>
+    <li>worked with dr.law at uncch to photometrically look for alien life on the asteroid belt. some cool  <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">pictures from then</a></p>
     <li>spent the past year+ diving deep into the <a href="https://www.nasdaq.com/articles/chandhana-sathishkumar%3A-reducing-reliance-on-traditional-plastics" style="color: #944547; text-decoration: none;">plastic alternative space</a>. made <a href="https://x.com/chandhana01/status/1644734484435312643" style="color: #944547; text-decoration: none;">edible bioplastic</a> from red algae for &lt;$1/1.5m<sup>2</sup> in a makeshift lab at home. got an emergent ventures grant. <a href="https://x.com/chandhana01/status/1779358580673482814" style="color: #944547; text-decoration: none;">recent update.</a></p>
     <li>spent a year exploring the brain’s mysteries. wrote a <a href="https://books.google.com/books/about/What_Memory.html?id=GanhzgEACAAJ" style="color: #944547; text-decoration: none;">book</a> about the science of memory. convinced an iit-m professor to let me join his phd research group at 16, where i researched fetal memory development and phosphene-induced vision restoration. was a neurotech fellow at <a href="https://brainsatplay.com/" style="color: #944547; text-decoration: none;" >brains@play</a>. and made an <a href="https://medium.com/@chandhanas/brain-computer-interfaces-science-tech-and-future-6ba87607ab1b" style="color: #944547; text-decoration: none;" >article repository</a> about the journey.</p>
 </section>
@@ -90,7 +90,7 @@
       </style>
 <ul>
     <li>did stand-up comedy competitively (yes, it’s a thing) for 3 years.</p>
-    <li>set a <a href="https://www.guinnessworldrecords.com/world-records/685929-longest-duration-hula-hooping-around-one-elbow" style="color: #944547; text-decoration: none;">guinness record</a> because i was bored during the pandemic (got invited to be a dancer in a <a href="https://www.thehindu.com/entertainment/movies/rashmika-mandannas-next-rainbow-to-be-a-tamil-telugu-bilingual/article66694241.ece" style="color: #944547; text-decoration: none;">tamil-telugu movie</a> after this lol)</p>
+    <li>set a <a href="https://www.guinnessworldrecords.com/world-records/685929-longest-duration-hula-hooping-around-one-elbow" style="color: #944547; text-decoration: none;">guinness record</a> because i was bored during the pandemic </p>
     <li>got invited to have high tea with a baroness in the <a href="https://en.wikipedia.org/wiki/House_of_Lords" style="color: #944547; text-decoration: none;">house of lords</a> in london</p>
     <li>touched human brains and hearts (in a non-serial killer way) </p>
     <li><a href="https://x.com/chandhana01/status/1803443735125995951" style="color: #944547; text-decoration: none;">climbed a glacier </a> on the alps </p>
