--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="about" class="section">
     <h2 style="color: #454545;">about me</h2>
     <ul>
-    <li>grew up in <a href="https://www.incredibleindia.org/content/incredible-india-v2/en/destinations/chennai.html" style="color: #944547; text-decoration: none;">chennai</a>, india for most my life where i — learned 4 languages, handmade magazines, obsessed over hindu + greek mythology and designed <a href="https://www.instagram.com/p/C5SH0dzLIvq/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" style="color: #944547; text-decoration: none;">met gala-esque</a> dresses inspired by it, played a lot of <a href="https://en.wikipedia.org/wiki/Kho_kho" style="color: #944547; text-decoration: none;">kho-kho</a> and <a href="https://en.wikipedia.org/wiki/Kabaddi" style="color: #944547;text-decoration: none;">kabaddi</a>, rapped in sanskrit with chyk, learned to parasail and scuba dive on a <a href="https://en.wikipedia.org/wiki/Havelock_island" style="color: #944547;text-decoration: none;">random island</a> in the bay of bengal, convinced my school to let me skip exams for two years, and built up an extremely high spice tolerance.</p>
+    <li>grew up in <a href="https://www.incredibleindia.org/content/incredible-india-v2/en/destinations/chennai.html" style="color: #944547; text-decoration: none;">chennai</a>, india for most my life where i — learned 4 languages, handmade magazines, obsessed over hindu + greek mythology and designed <a href="https://www.instagram.com/p/C5SH0dzLIvq/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" style="color: #944547; text-decoration: none;">met gala-esque</a> dresses inspired by it, played a lot of <a href="https://en.wikipedia.org/wiki/Kho_kho" style="color: #944547; text-decoration: none;">kho-kho</a> and <a href="https://en.wikipedia.org/wiki/Kabaddi" style="color: #944547;text-decoration: none;">kabaddi</a>, rapped in sanskrit with chyk, did competitive stand-up comedy (yes it's a thing), convinced my school to let me skip exams for two years, and built up an extremely high spice tolerance.</p>
     <li>moved to america in 2023 </p>
     </ul>
   </section>
@@ -89,7 +89,6 @@
         }
       </style>
 <ul>
-    <li>did stand-up comedy competitively (yes, it’s a thing) for 3 years.</p>
     <li>set a <a href="https://www.guinnessworldrecords.com/world-records/685929-longest-duration-hula-hooping-around-one-elbow" style="color: #944547; text-decoration: none;">guinness record</a> because i was bored during the pandemic </p>
     <li>got invited to have high tea with a baroness in the <a href="https://en.wikipedia.org/wiki/House_of_Lords" style="color: #944547; text-decoration: none;">house of lords</a> in london</p>
     <li>touched human brains and hearts (in a non-serial killer way) </p>
