--- a/index.html
+++ b/index.html
@@ -111,4 +111,4 @@
         <div class="blank-line"></div>
         <div class="blank-line"></div>
         <div class="blank-line"></div>
-        <p class= "center-align"><a href="https://www.youtube.com/watch?v=Ng6COehRHdU" style="color: hsl(130, 19%, 76%); text-decoration: none;">easter egg </a></p>
+        <p class= "center-align"><a href="https://www.youtube.com/watch?v=YGyvLlPad8Q" style="color: hsl(130, 19%, 76%); text-decoration: none;">easter egg </a></p>
