--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
       </style>
 <ul>
     <li>set a <a href="https://www.guinnessworldrecords.com/world-records/685929-longest-duration-hula-hooping-around-one-elbow" style="color: #944547; text-decoration: none;">guinness record</a> because i was bored during the pandemic </p>
-    <li>got invited to have high tea with a baroness in the <a href="https://en.wikipedia.org/wiki/House_of_Lords" style="color: #944547; text-decoration: none;">house of lords</a> in london</p>
     <li>touched human brains and hearts (in a non-serial killer way) </p>
     <li><a href="https://x.com/chandhana01/status/1803443735125995951" style="color: #944547; text-decoration: none;">climbed a glacier </a> on the alps </p>
-    <li>spent the recent new years eve making a <a href="https://x.com/chandhana01/status/1741554947668467752" style="color: #944547; text-decoration: none;"> dagger</a> </p>
+    <li>made a <a href="https://x.com/chandhana01/status/1741554947668467752" style="color: #944547; text-decoration: none;"> dagger</a> </p>
     <li>trained swim with <a href="https://en.wikipedia.org/wiki/Anton_Down-Jenkins" style="color: #944547; text-decoration: none;">an olympian</a> for a month</p>
     <li>stood on top of a <a href="https://x.com/chandhana01/status/1763191692554068370" style="color: #944547; text-decoration: none;">nuclear reactor</a> and watched fission emit cherenkov radiation </p>
  </ul>
