--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 <ul>
     <li>set a <a href="https://www.guinnessworldrecords.com/world-records/685929-longest-duration-hula-hooping-around-one-elbow" style="color: #944547; text-decoration: none;">guinness record</a> because i was bored during the pandemic </p>
     <li>touched human brains and hearts (in a non-serial killer way) </p>
-    <li><a href="https://x.com/chandhana01/status/1803443735125995951" style="color: #944547; text-decoration: none;">climbed a glacier </a> on the alps </p>
-    <li>trained swim with <a href="https://en.wikipedia.org/wiki/Anton_Down-Jenkins" style="color: #944547; text-decoration: none;">an olympian</a> for a month</p>
+    <li><a href="https://x.com/chandhana01/status/1803443735125995951" style="color: #944547; text-decoration: none;">climbed a glacier </a> on the alps, <a href="https://https://x.com/chandhana01/status/1799734912708407347" style="color: #944547; text-decoration: none;">jumped </a> out a plane </p>
     <li>stood on top of a <a href="https://x.com/chandhana01/status/1763191692554068370" style="color: #944547; text-decoration: none;">nuclear reactor</a> and watched fission emit cherenkov radiation </p>
  </ul>
     
