--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="blank-line"></div>
-  <title style="color: #454545;">Chandhana Sathishkumar</title>
+  <title style="color: #454545;"> chandhana / चंदना / சந்தனா </title>
   <style>
     body {
       font-family: normal, serif;
