--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div class="blank-line"></div>
-  <title style="color: #454545;"> chandhana / चंदना / சந்தனா </title>
+  <title style="color: #454545;"> chandhana </title>
   <style>
     body {
       font-family: normal, serif;
@@ -48,7 +48,7 @@
         <h1>       </h1>
         <h1>       </h1>
 
-        <h1 style="color: #454545;">Chandhana Sathishkumar</h1>
+        <h1 style="color: #454545;">chandhana / चंदना / சந்தனா</h1>
         <nav>
           <a href="#life" style="color: #C49491;">living life</a>
           <a href="https://twitter.com/chandhana01" style="color: #C49491; text-decoration: none;">twitter</a>
