--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>       </h1>
         <h1>       </h1>
 
-        <h1 style="color: #454545;">hi! i'm chandhana / चंदना / சந்தனா</h1>
+        <h1 style="color: #454545;">hi, i'm chandhana / चंदना / சந்தனா</h1>
         <nav>
           <a href="#life" style="color: #C49491;">living life</a>
           <a href="https://twitter.com/chandhana01" style="color: #C49491; text-decoration: none;">twitter</a>
