--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <nav>
           <a href="#work" style="color: #C49491;">work</a>
           <a href="#play" style="color: #C49491;">play</a>
-          <a href="https://www.instagram.com/chandhana.art/" style="color: #57925f; text-decoration: none;" >art</a>
           <a href="https://twitter.com/chandhana01" style="color: #C49491; text-decoration: none;">x</a>
+          <a href="https://www.instagram.com/chandhana.art/" style="color: #57925f; text-decoration: none;" >art</a>
           <a href="https://www.linkedin.com/in/chandhana-sathishkumar/" style="color: #C49491; text-decoration: none; target="_blank"" >linkedin</a>
         </nav>
 
@@ -77,7 +77,7 @@
     <li>spent a year exploring the brain’s mysteries. wrote a <a href="https://books.google.com/books/about/What_Memory.html?id=GanhzgEACAAJ" style="color: #944547; text-decoration: none;">book</a> about the science of memory. convinced an iit-m professor to let me join his phd research group at 16, where i researched fetal memory development and phosphene-induced vision restoration. was a neurotech fellow at <a href="https://brainsatplay.com/" style="color: #944547; text-decoration: none;" >brains@play</a>. and made an <a href="https://medium.com/@chandhanas/brain-computer-interfaces-science-tech-and-future-6ba87607ab1b" style="color: #944547; text-decoration: none;" >article repository</a> about the journey.</p>
 </section>
 
-  <section id="life" class="section">
+  <section id="play" class="section">
     <h2 style="color: #454545;">shenanigans</h2>
     <blockquote style="border-left: 2px solid #000000; padding-left: 1rem;">
         <p> living by: <a href ="https://sive.rs/htl03" style="color: #C49491; text-decoration: none;">"if you knew you’d go blind tomorrow, how intensely would you look at the world today?"</a> </p>
