--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <nav>
           <a href="#work" style="color: #C49491;">work</a>
           <a href="#play" style="color: #C49491;">play</a>
-          <a href="https://twitter.com/chandhana01" style="color: #C49491; text-decoration: none;">x</a>
+          <a href="https://twitter.com/chandhana01" style="color: #C49491; text-decoration: none;">twt</a>
           <a href="https://www.instagram.com/chandhana.art/" style="color: #57925f; text-decoration: none;" >art</a>
-          <a href="https://www.linkedin.com/in/chandhana-sathishkumar/" style="color: #C49491; text-decoration: none; target="_blank"" >linkedin</a>
+          <a href="mailto:chandhana.sathishkumar@gmail.com">contact</a>
+          
         </nav>
 
       </header>
