--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a href="#play" style="color: #C49491;">play</a>
           <a href="https://twitter.com/chandhana01" style="color: #C49491; text-decoration: none;">twt</a>
           <a href="https://www.instagram.com/chandhana.art/" style="color: #57925f; text-decoration: none;" >art</a>
-          <a href="mailto:chandhana.sathishkumar@gmail.com" style="color: #57925f; text-decoration: none;">contact</a>
+          <a href="mailto:chandhana.sathishkumar@gmail.com" style="color: #C49491; text-decoration: none;">contact</a>
           
         </nav>
 
