--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
    
   
   <section id="work" class="section">
-    <h2 style="color: #454545;">curiosities</h2>
+    <h2 style="color: #454545;">curiosities / काम / ஆர்வம்</h2>
     <ul> 
     <li>currently testing bay area foods for endocrine-disrupting chemicals that leach from plastic with nat friedman at <a href="https://www.plasticlist.org/" style=" color: #944547; text-decoration: none;">plasticlist.org </a></p>
     <li>worked with dr.law at uncch to photometrically look for alien life on the asteroid belt. some cool  <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">pictures from then</a></p>
@@ -75,7 +75,7 @@
 </section>
 
   <section id="play" class="section">
-    <h2 style="color: #454545;">shenanigans</h2>
+    <h2 style="color: #454545;">shenanigans / खेल / விளையாடு</h2>
     <blockquote style="border-left: 2px solid #000000; padding-left: 1rem;">
         <p> living by: <a href ="https://sive.rs/htl03" style="color: #C49491; text-decoration: none;">"if you knew you’d go blind tomorrow, how intensely would you look at the world today?"</a> </p>
       </blockquote>      
