--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
   <section id="work" class="section">
     <h2 style="color: #454545;">curiosities / काम / ஆர்வம்</h2>
     <ul> 
-    <li>currently testing bay area foods for endocrine-disrupting chemicals that leach from plastic with nat friedman at <a href="https://www.plasticlist.org/" style=" color: #944547; text-decoration: none;">plasticlist.org </a></p>
-    <li>worked with dr.law at uncch to photometrically look for alien life on the asteroid belt. some cool  <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">pictures from then</a></p>
-    <li>spent a year diving deep into the <a href="https://www.nasdaq.com/articles/chandhana-sathishkumar%3A-reducing-reliance-on-traditional-plastics" style="color: #944547; text-decoration: none;">plastic alternative space</a>. made <a href="https://x.com/chandhana01/status/1644734484435312643" style="color: #944547; text-decoration: none;">edible bioplastic</a> from red algae for &lt;$1/1.5m<sup>2</sup> in a makeshift lab at home. got an emergent ventures grant. <a href="https://x.com/chandhana01/status/1779358580673482814" style="color: #944547; text-decoration: none;">recent update</a></p>
+    <li>tested 300 bay area foods for endocrine-disrupting chemicals that leach from plastic with nat friedman at <a href="https://www.plasticlist.org/" style=" color: #944547; text-decoration: none;">plasticlist.org </a></p>
+    <li>worked with dr.law at uncch to photometrically detect alien life on the asteroid belt. some cool  <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">pictures from then</a></p>
+    <li>dove deep into the <a href="https://www.nasdaq.com/articles/chandhana-sathishkumar%3A-reducing-reliance-on-traditional-plastics" style="color: #944547; text-decoration: none;">plastic alternative space</a>. made <a href="https://x.com/chandhana01/status/1644734484435312643" style="color: #944547; text-decoration: none;">edible bioplastic</a> from red algae for &lt;$1/1.5m<sup>2</sup> in a makeshift lab at home. got an emergent ventures grant for it. <a href="https://x.com/chandhana01/status/1779358580673482814" style="color: #944547; text-decoration: none;">most recent update</a></p>
     <li>spent a year exploring the brain’s mysteries. wrote a <a href="https://books.google.com/books/about/What_Memory.html?id=GanhzgEACAAJ" style="color: #944547; text-decoration: none;">book</a> about the science of memory. convinced an iit-m professor to let me join his phd research group at 16, where i researched fetal memory development and phosphene-induced vision restoration. was a neurotech fellow at <a href="https://brainsatplay.com/" style="color: #944547; text-decoration: none;" >brains@play</a>. and made an <a href="https://medium.com/@chandhanas/brain-computer-interfaces-science-tech-and-future-6ba87607ab1b" style="color: #944547; text-decoration: none;" >article repository</a> about the journey.</p>
 </section>
 
@@ -90,7 +90,7 @@
 <ul>
     <li>set a <a href="https://www.guinnessworldrecords.com/world-records/685929-longest-duration-hula-hooping-around-one-elbow" style="color: #944547; text-decoration: none;">guinness record</a> because i was bored during the pandemic </p>
     <li>touched human brains and hearts (in a non-serial killer way) </p>
-    <li><a href="https://x.com/chandhana01/status/1803443735125995951" style="color: #944547; text-decoration: none;">climbed a glacier </a> on the alps, <a href="https://https://x.com/chandhana01/status/1799734912708407347" style="color: #944547; text-decoration: none;">jumped </a> out a plane </p>
+    <li><a href="https://x.com/chandhana01/status/1803443735125995951" style="color: #944547; text-decoration: none;">climbed </a>a glacier on the alps, <a href="https://https://x.com/chandhana01/status/1799734912708407347" style="color: #944547; text-decoration: none;">jumped </a> out a plane </p>
     <li>stood on top of a <a href="https://x.com/chandhana01/status/1763191692554068370" style="color: #944547; text-decoration: none;">nuclear reactor</a> and watched fission emit cherenkov radiation </p>
  </ul>
     
