--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
    
   
   <section id="work" class="section">
-    <h2 style="color: #454545;">curiosities / काम / ஆர்வம்</h2>
+    <h2 style="color: ##3f3f3f;">curiosities / काम / ஆர்வம்</h2>
     <ul> 
     <li>tested 300 bay area foods for endocrine-disrupting chemicals that leach from plastic with nat friedman at <a href="https://www.plasticlist.org/" style=" color: #944547; text-decoration: none;">plasticlist.org </a></p>
     <li>worked with dr.law at uncch to photometrically detect alien life on the asteroid belt. some cool  <a href="https://x.com/chandhana01/status/1713763714296693240" style="color: #944547; text-decoration: none;">pictures from then</a></p>
