--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </section>
 
   <section id="play" class="section">
-    <h2 style="color: ##3f3f3f;">shenanigans / खेल / விளையாடு</h2>
+    <h2 style="color: ##3f3f3f;">shenanigans / खेल / விளையாட்டு</h2>
     <blockquote style="border-left: 2px solid #000000; padding-left: 1rem;">
         <p> living by: <a href ="https://sive.rs/htl03" style="color: #C49491; text-decoration: none;">"if you knew you’d go blind tomorrow, how intensely would you look at the world today?"</a> </p>
       </blockquote>      
